--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Bombay Bikes</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,18 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <h1>Bombay Bikes</h1>
+        <h2>title 2</h2>
+        <h3>title 3</h3>
         <p>Hello world! This is HTML5 Boilerplate.</p>
+        <ul>
+            <li>asdfasdf</li>
+            <li>asdfasdf</li>
+        </ul>
+        <ol>
+            <li>asdfasdf</li>
+            <li>asdfasdf</li>
+        </ol>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
